Update and rename README.md to Index.html

--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="description" content="web design">
 	  <meta name="keywords" content="web design, logo design, graphic design">
-  	<meta name="author" content="Pelontle Vinolia">
-    <title>Vivitech Web Deisgn" | Services</title>
+  	<meta name="author" content="Pelontle Vinolia Motlogelwa">
+	   <title>Vivitech Web design"|services</title>
     <link rel="stylesheet" href="./css/style.css">
  </head>
 <body>
